ajustando el header y el body

--- a/index.html
+++ b/index.html
@@ -89,18 +89,15 @@
         <div class="quintodiv" style="background-color: #F3F3F3;">
             <h1>New Products</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed to eiusmod tempor incididunt</p>
-            <ul>
-                <li>
-                    <a href=""><img src="./Imagenes/product-1.jpg" alt="">
-                    <p>BeBe Bloom Tea</p><span>$100.00 - 120.00</span></a>
-                </li>
-                <li><a href=""><img src="./Imagenes/product-2.jpg" alt=""><p>Que herbal Tea</p><span>$100.00 - 120.00</span></a></li>
-                <li><a href=""><img src="./Imagenes/product-3.jpg" alt=""><p>Society Ice Tea</p><span>$100.00 - 120.00</span></a></li>
-                <li><a href=""><img src="./Imagenes/product-4.jpg" alt=""><p>Best Friends Tea</p><span>$100.00 - 120.00</span></a></li>
-                <li><a href=""><img src="./Imagenes/product-1.jpg" alt=""><p>Every spice Tea</p><span>$100.00 - 120.00</span></a></li>
-                <li><a href=""><img src="./Imagenes/product-2.jpg" alt=""><p>Tea and Chai</p><span>$100.00 - 120.00</span></a></li>
-                <li><a href=""><img src="./Imagenes/product-3.jpg" alt=""><p>Green Tea Tulsi</p><span>$100.00 - 120.00</span></a></li>
-                <li><a href=""><img src="./Imagenes/product-4.jpg" alt=""><p>Instant Tea Premix</p><span>$100.00 - 120.00</span></a></li>
+            <ul class="productos">
+                <li><a href=""><img src="./Imagenes/product-1.jpg" alt=""><p class="p_productos">BeBe Bloom Tea</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
+                <li><a href=""><img src="./Imagenes/product-2.jpg" alt=""><p class="p_productos">Que herbal Tea</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
+                <li><a href=""><img src="./Imagenes/product-3.jpg" alt=""><p class="p_productos">Society Ice Tea</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
+                <li><a href=""><img src="./Imagenes/product-4.jpg" alt=""><p class="p_productos">Best Friends Tea</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
+                <li><a href=""><img src="./Imagenes/product-1.jpg" alt=""><p class="p_productos">Every spice Tea</p><span class="precio_descuento"> $100.00 -<span class="precio_sin_descuento">120.00</span> </span></a></li>
+                <li><a href=""><img src="./Imagenes/product-2.jpg" alt=""><p class="p_productos">Tea and Chai</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
+                <li><a href=""><img src="./Imagenes/product-3.jpg" alt=""><p class="p_productos">Green Tea Tulsi</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
+                <li><a href=""><img src="./Imagenes/product-4.jpg" alt=""><p class="p_productos">Instant Tea Premix</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
             </ul>
         </div>
         <div class="sextodiv">
