--- a/index.html
+++ b/index.html
@@ -101,16 +101,14 @@
             </ul>
         </div>
         <div class="sextodiv">
-<h1>Join to our Newsletter</h1>
-            <img src="/Imagenes/bg-2.jpg" alt="" />
+            <h1>Join to our Newsletter</h1>
             <form action="">
-              <input type="email" value="Your Email Address" />
-              <input type="submit" value="SUBSCRIBE" />
+              <input class="email"type="email" value="Your Email Address*" />
+                <input class="subscribe"type="submit" value="SUBSCRIBE" />
             </form>
           </div>
     
           <div class="septimodiv">
-            /*background insertar/* 
             <h1>Latest News</h1>
             <ul>
               <li>
