--- a/index.html
+++ b/index.html
@@ -115,19 +115,23 @@
                 <a href=""><img src="/Imagenes/blog-single-1.jpg" alt="">
                 <p>14 Sep</p>
                  <h2>Lorem ipsum sit ame. co</h2>
+                 <p class="parrafoProductos">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit sed do eiusmod tempor <br>incididunt ut labor</p>
                   <span> READ MORE</span></a>
                 </li>
               <li> 
                 <a href=""><img src="/Imagenes/blog-single-2.jpg" alt="">
                     <p>20 Dec</p>
                     <h2>Lorem ipsum sit ame. co</h2>
+                    <p class="p2_div7">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit sed do eiusmod tempor <br>incididunt ut labor</p>
                     <span> READ MORE</span></a>
                 </li>
               <li>
-                <a href=""><img src="/Imagenes/blog-single-3.jpg" alt=""></li>
+                <a href=""><img src="/Imagenes/blog-single-3.jpg" alt="">
                     <p>18 Aug</p>
                     <h2>Lorem ipsum sit ame. co</h2>
+                    <p class="p2_div7">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit sed do eiusmod tempor <br>incididunt ut labor</p>
                     <span> READ MORE</span></a>
+              </li>
             </ul>
           </div>
     
