Ajustando responsive movil

--- a/index.html
+++ b/index.html
@@ -135,58 +135,63 @@
             </ul>
           </div>
     
-          <div class="octavodiv">
-            <ul>
-                <li><img src="/Imagenes/1.jpg" alt=""></li>
-                <li><img src="/Imagenes/2.jpg" alt=""> </li>
-                <li><img src="/Imagenes/3.jpg" alt=""></li>
-                <li><img src="/Imagenes/4.jpg" alt=""></li>
-                <li><img src="/Imagenes/5.jpg" alt=""></li>
+          <!-- --------------- DIV 8 ------------------------>
+        <div class="div_8">
+            <ul class="ul_div8">
+                <li><img src="Imagenes/1.jpg" alt=""></li>
+                <li><img src="Imagenes/2.jpg" alt=""></li>
+                <li><img src="Imagenes/3.jpg" alt=""></li>
+                <li><img src="Imagenes/4.jpg" alt=""></li>
+                <li><img src="Imagenes/5.jpg" alt=""></li>
             </ul>
-          </div>
-    </main>
-    <footer>
-        <div>
-            <ul>
-                <li><a href="">My Account</a></li>
-                <li><a href="">My Account</a></li>
-                <li><a href=""></a>Order History</li>
-                <li><a href=""></a>WishList</li>
-                <li><a href=""></a>Newsletter</li>
-                <li><a href=""></a>Order History</li>
-                <li><a href=""></a>International Orders</li>
-            </ul>
-            <ul>
-                <li><a href="">Information</a></li>
-                <li><a href="">About Us</a></li>
-                <li><a href=""></a>Delivery Information</li>
-                <li><a href=""></a>Privacy Policy</li>
-                <li><a href=""></a>Terms & Conditions</li>
-                <li><a href=""></a>Customer Service</li>
-                <li><a href=""></a>Return Policy</li>
-            </ul>
-            <ul>
-                <li><a href="">Quick Links</a></li>
-                <li><a href="">Support Center</a></li>
-                <li><a href=""></a>Term & Conditions</li>
-                <li><a href=""></a>Shipping</li>
-                <li><a href=""></a>Privacy Policy</li>
-                <li><a href=""></a>Help</li>
-                <li><a href=""></a>FAQS</li>
-            </ul>
-            <ul>
-                <li><a href="">Contact Us</a></li>
-                <li><a href="">Your addres goes here</a></li>
-                <li><a href=""></a>0123456789</li>
-                <li><a href=""></a>0123456789/li>
-                <li><a href=""></a>demo@example.com</li>
-                <li><a href=""></a>demo@example.com</li>
-            </ul>
-        </div>
-        <div class="footer_parte2" style="background-color: #EBEBEB;">
-            <p>© 2021 <b>SabujCha</b> Made With <img src="/Imagenes/heart-logo-svgrepo-com.svg" style="width: 1rem;"alt=""> By <b>HasThemes</b>.</p>
-            <img src="/Imagenes/payment.png" alt="">
-        </div>
-    </footer>
-</body>
-</html>
+            </div>
+        </main>
+        <!-----------FOOTER PARTE 1-------------->
+        <footer>
+            <div class="footer_parte1">
+                <ul class="ul_footer">
+                    <li><a class="a_ul_footer" href="">My Account</a></li>
+                    <li><a href="">My Account</a></li>
+                    <li><a href="">Order History</a></li>
+                    <li><a href="">WishList</a></li>
+                    <li><a href="">Newsletter</a></li>
+                    <li><a href="">Order History</a></li>
+                    <li><a href="">International Orders</li>
+                </ul>
+                <ul class="ul_footer">
+                    <li><a class="a_ul_footer" href="">Information</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Delivery Information</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                    <li><a href="">Terms & Conditions</a></li>
+                    <li><a href="">Customer Service</a></li>
+                    <li><a href="">Return Policy</a></li>
+                </ul>
+                <ul class="ul_footer">
+                    <li><a class="a_ul_footer" href="">Quick Links</a></li>
+                    <li><a href="">Support Center</a></li>
+                    <li><a href="">Term & Conditions</a></li>
+                    <li><a href="">Shipping</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                    <li><a href="">Help</a></li>
+                    <li><a href="">FAQS</a></li>
+                </ul>
+                <ul class="ul_footer">
+                    <li><a class="a_ul_footer" href="">Contact Us</a></li>
+                    <li><a href="">Your addres goes here</a></li>
+                    <li><a href="">0123456789</a></li>
+                    <li><a href="">0123456789</a></li>
+                    <li><a href="">demo@example.com</a></li>
+                    <li><a href="">demo@example.com</a></li>
+                </ul>
+            </div>
+            <!-----------FOOTER PARTE 2 -------------->
+            <div class="footer_parte2">
+                <div class="sabujcha_footer">
+                    <p>© 2021 <b>SabujCha</b> Made With <img src="Imagenes/heart-logo-svgrepo-com.svg" style="width: 1rem;"alt=""> By <b>HasThemes</b>.</p>
+                </div>
+                <img class="img_footer"src="Imagenes/payment.png" alt="">
+            </div>
+        </footer>
+    </body>
+    </html>
