AJutando fuentes y colores

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
             </ul>
           </div>
     
-          <!-- --------------- DIV 8 ------------------------>
-        <div class="div_8">
+
+        <div class="octavodiv">
             <ul class="ul_div8">
                 <li><img src="Imagenes/1.jpg" alt=""></li>
                 <li><img src="Imagenes/2.jpg" alt=""></li>
@@ -146,9 +146,10 @@
             </ul>
             </div>
         </main>
-        <!-----------FOOTER PARTE 1-------------->
+
+
         <footer>
-            <div class="footer_parte1">
+            <div class="footer1">
                 <ul class="ul_footer">
                     <li><a class="a_ul_footer" href="">My Account</a></li>
                     <li><a href="">My Account</a></li>
@@ -185,10 +186,10 @@
                     <li><a href="">demo@example.com</a></li>
                 </ul>
             </div>
-            <!-----------FOOTER PARTE 2 -------------->
-            <div class="footer_parte2">
+    
+            <div class="footer2">
                 <div class="sabujcha_footer">
-                    <p>© 2021 <b>SabujCha</b> Made With <img src="Imagenes/heart-logo-svgrepo-com.svg" style="width: 1rem;"alt=""> By <b>HasThemes</b>.</p>
+                    <p>© 2021 <b>SabujCha</b> Made With <img src="./Imagenes/corazon.png" style="width: 1rem;"alt=""> By <b>HasThemes</b>.</p>
                 </div>
                 <img class="img_footer"src="Imagenes/payment.png" alt="">
             </div>
