AJutando imagenes y colores

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <option value="">EUR</option>
             <option value="">KRW</option>
         </select>
-        <img class="carrocompras" src="/Imagenes/carro.png" alt="">
+        <img class="carrocompras" src="./Imagenes/carro.png" alt="">
     </header>
     <main>
         <div class="primerdiv">
@@ -109,31 +109,31 @@
           </div>
     
           <div class="septimodiv">
-            <h1>Latest News</h1>
-            <ul>
-              <li>
-                <a href=""><img src="/Imagenes/blog-single-1.jpg" alt="">
-                <p>14 Sep</p>
-                 <h2>Lorem ipsum sit ame. co</h2>
-                 <p class="parrafoProductos">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit sed do eiusmod tempor <br>incididunt ut labor</p>
-                  <span> READ MORE</span></a>
+            <h1 class="div7titulo">Latest News</h1>
+            <ul class="div7lista">
+                <li>
+                    <img class="img7"src="Imagenes/blog-single-1.jpg" alt="">
+                    <p class="fecha7">14 Sep</p>
+                    <h2 class="des7">Lorem ipsum sit ame. co</h2>
+                    <p class="des2-7">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit sed do eiusmod tempor <br>incididunt ut labor</p>
+                    <a class="link7" href="">READ MORE</a>
                 </li>
-              <li> 
-                <a href=""><img src="/Imagenes/blog-single-2.jpg" alt="">
-                    <p>20 Dec</p>
-                    <h2>Lorem ipsum sit ame. co</h2>
-                    <p class="p2_div7">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit sed do eiusmod tempor <br>incididunt ut labor</p>
-                    <span> READ MORE</span></a>
+                <li> 
+                    <img class="img7" src="Imagenes/blog-single-2.jpg" alt="">
+                    <p class="fecha7">20 Dec</p>
+                    <h2 class="des7">Lorem ipsum sit ame. co</h2>
+                    <p class="des2-7">Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit sed do eiusmod tempor <br>incididunt ut labor</p>
+                    <a class="link7" href="">READ MORE</a>
                 </li>
-              <li>
-                <a href=""><img src="/Imagenes/blog-single-3.jpg" alt="">
-                    <p>18 Aug</p>
-                    <h2>Lorem ipsum sit ame. co</h2>
-                    <p class="p2_div7">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit sed do eiusmod tempor <br>incididunt ut labor</p>
-                    <span> READ MORE</span></a>
-              </li>
+                <li>
+                    <img class="img7" src="Imagenes/blog-single-3.jpg" alt="">
+                    <p class="fecha7">18 Aug</p>
+                    <h2 class="des7">Lorem ipsum sit ame. co</h2>
+                    <p class="des2-7">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit sed do eiusmod tempor <br>incididunt ut labor</p>
+                    <a class="link7" href="">READ MORE</a>
+                </li>
             </ul>
-          </div>
+        </div>
     
 
         <div class="octavodiv">
@@ -150,7 +150,7 @@
 
         <footer>
             <div class="footer1">
-                <ul class="ul_footer">
+                <ul class="listafooter">
                     <li><a class="a_ul_footer" href="">My Account</a></li>
                     <li><a href="">My Account</a></li>
                     <li><a href="">Order History</a></li>
@@ -159,7 +159,7 @@
                     <li><a href="">Order History</a></li>
                     <li><a href="">International Orders</li>
                 </ul>
-                <ul class="ul_footer">
+                <ul class="listafooter">
                     <li><a class="a_ul_footer" href="">Information</a></li>
                     <li><a href="">About Us</a></li>
                     <li><a href="">Delivery Information</a></li>
@@ -168,7 +168,7 @@
                     <li><a href="">Customer Service</a></li>
                     <li><a href="">Return Policy</a></li>
                 </ul>
-                <ul class="ul_footer">
+                <ul class="listafooter">
                     <li><a class="a_ul_footer" href="">Quick Links</a></li>
                     <li><a href="">Support Center</a></li>
                     <li><a href="">Term & Conditions</a></li>
@@ -177,7 +177,7 @@
                     <li><a href="">Help</a></li>
                     <li><a href="">FAQS</a></li>
                 </ul>
-                <ul class="ul_footer">
+                <ul class="listafooter">
                     <li><a class="a_ul_footer" href="">Contact Us</a></li>
                     <li><a href="">Your addres goes here</a></li>
                     <li><a href="">0123456789</a></li>
