Apliacando y agregando imagenes footer

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     
 
         <div class="octavodiv">
-            <ul class="ul_div8">
+            <ul class="lista8">
                 <li><img src="Imagenes/1.jpg" alt=""></li>
                 <li><img src="Imagenes/2.jpg" alt=""></li>
                 <li><img src="Imagenes/3.jpg" alt=""></li>
