ajustado estilos de la pagina de producto

--- a/Producto.html
+++ b/Producto.html
@@ -5,48 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap" rel="stylesheet">
+      <!-- ------------------LINKEADO FUENTES DE GOOGLE ------------------>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display&family=Work+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="producto.css">
     <script src="https://kit.fontawesome.com/b59af0f90f.js" crossorigin="anonymous"></script>
     <title>Product</title>
 </head>
 <body>
-    <!-----------------HEADER 1er CONTAINER BODY---------------------->
+   
     <header>
     <!----------------BARRA DE NAVEGACIÓN--------------------->    
-        <nav>
+       
             <!------------MENÚ-------------->
-            <ul class="nave">
-                <li class="navegacion"><a href=""style="text-decoration:none ;"> HOME</a></li>
-                <li><a href="" style="text-decoration:none ;"> ABOUT</a></li>
-                <li><a href=""style="text-decoration:none ;"> SHOP</a></li>
-                <li><a href=""style="text-decoration:none ;"> BLOG</a></li>
-                <li><a href=""style="text-decoration:none ;"> PAGES</a></li>
-                <li><a href=""style="text-decoration:none ;">CONTACT</a></li>
+            <ul>
+                <li><a href="">HOME</a></li>
+                <li><a href="">ABOUT</a></li>
+                <li><a href="">SHOP</a></li>
+                <li><a href="">BLOG</a></li>
+                <li><a href="">PAGES</a></li>
+                <li><a href="">CONTACT</a></li>
             </ul>
-        </nav>
-            <!----------LOGO HEADER--------->
-        <section class="nave1">
-            <img src="./Imagenes/logo.png" alt="logo">
-        </section>
-            <!--ESPACIO CARRITO DE COMPRAS-->
-        <section class="pay">
         
-            <select style="border: none;" name="" id="">
+            <img class="logo" src="./Imagenes/logo.png" alt="">
+            <select name="" id="">
                 <option value="" selected>USD</option>
                 <option value="">COP</option>
                 <option value="">CAD</option>
                 <option value="">EUR</option>
                 <option value="">KRW</option>
             </select>
-            <img src="./Imagenes/carro.png" alt="carrito-de-compras" class="car">-
-        </section>
+            <img class="carrocompras" src="./Imagenes/carro.png" alt="">
     </header>
     <!--------------------2do CONTAINER BODY----------------->
     <section class="first">
@@ -171,68 +159,51 @@
         </section>           
     </section>
     <!--------------------6TO CONTAINER BODY----------------->
-    <Footer>
-        <section class="d1">
-            <h4>My Account</h4>
-            <div>
-                <ul class="li">
-                    <li>My Account</li>
-                    <li>Order History</li>
-                    <li>WishList</li>
-                    <li>Newsletter</li>
-                    <li>Order History</li>
-                    <li>International Orders</li>
-                </ul>
+    <footer>
+        <div class="footer1">
+            <ul class="listafooter">
+                <li><a class="a_ul_footer" href="">My Account</a></li>
+                <li><a href="">My Account</a></li>
+                <li><a href="">Order History</a></li>
+                <li><a href="">WishList</a></li>
+                <li><a href="">Newsletter</a></li>
+                <li><a href="">Order History</a></li>
+                <li><a href="">International Orders</li>
+            </ul>
+            <ul class="listafooter">
+                <li><a class="a_ul_footer" href="">Information</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Delivery Information</a></li>
+                <li><a href="">Privacy Policy</a></li>
+                <li><a href="">Terms & Conditions</a></li>
+                <li><a href="">Customer Service</a></li>
+                <li><a href="">Return Policy</a></li>
+            </ul>
+            <ul class="listafooter">
+                <li><a class="a_ul_footer" href="">Quick Links</a></li>
+                <li><a href="">Support Center</a></li>
+                <li><a href="">Term & Conditions</a></li>
+                <li><a href="">Shipping</a></li>
+                <li><a href="">Privacy Policy</a></li>
+                <li><a href="">Help</a></li>
+                <li><a href="">FAQS</a></li>
+            </ul>
+            <ul class="listafooter">
+                <li><a class="a_ul_footer" href="">Contact Us</a></li>
+                <li><a href="">Your addres goes here</a></li>
+                <li><a href="">0123456789</a></li>
+                <li><a href="">0123456789</a></li>
+                <li><a href="">demo@example.com</a></li>
+                <li><a href="">demo@example.com</a></li>
+            </ul>
+        </div>
+
+        <div class="footer2">
+            <div class="sabujcha_footer">
+                <p>© 2021 <b>SabujCha</b> Made With <img src="./Imagenes/corazon.png" style="width: 1rem;"alt=""> By <b>HasThemes</b>.</p>
             </div>
-        </section>
-        <section class="d2">
-            <h4>Information</h4>
-                <div>
-                    <ul class="li">
-                        <li>About Us</li>
-                        <li>Delivery Information/li>
-                        <li>Privacy Policy</li>
-                        <li>Terms & Conditions</li>
-                        <li>Customer Service</li>
-                        <li>Return Policy</li>
-                    </ul>
-                </div>
-        </section>
-        <section class="d3">
-            <h4>Quick Links</h4>
-                <div>
-                    <ul class="li">
-                        <li>Support Center</li>
-                        <li>Terms & Conditions</li>
-                        <li>Shipping</li>
-                        <li>Privacy Policy</li>
-                        <li>Help</li>
-                        <li>FAQS</li>
-                    </ul>
-                </div>
-        </section>
-        <section class="d4">
-            <h4>Contact Us</h4>
-                <div>
-                    <ul class="li">
-                        <li>Your addres goes here</li>
-                        </br>
-                        <li>0123456789</li>
-                        <li>0123456789</li>
-                        </br>
-                        <li>demo@example.com</li>
-                        <li>demo@example.com</li>
-                    </ul>
-                </div>
-        </section>
-        <section class="d5">
-            <div class="d6">
-                <p>&copy; 2021 <b>SabujCha</b> Made With <i class="fa-solid fa-heart"></i> By <b>HasThemes.</b></p>
-            </div>
-            <div class="d7">
-                <img src="./Imagenes/payment.png">
-            </div>
-        </section>
-    </Footer>
+            <img class="img_footer"src="Imagenes/payment.png" alt="">
+        </div>
+    </footer>
 </body>
 </html>
