--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display&family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Producto.html">
     <title>SabujCha</title>
 </head>
 <body>
     <header>
+
         <ul>
             <li><a href="">HOME</a></li>
             <li><a href="">ABOUT</a></li>
@@ -58,22 +60,22 @@
         </div>
 
         <div class="tercerdiv" >
-            <h1 class="latesProduct">Latest Products</h1>
+            <h1 class="latesProduct"><a href=""></a> Latest Products</h1>
             <p class="lates2">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do <br> eiusmod tempor incididunt</p>
             <ul class="productos">
-                <li><a href=""><img src="./Imagenes/product-1.jpg" alt="">
+                <li><a href="Producto.html" target="_top"><img src="./Imagenes/product-1.jpg" alt="">
                     <p class="p_productos">Nature Close Tea</p>
                     <span class="precio_descuento"> $100.00 -  <span class="precio_sin_descuento">120.00</span></span>    
                 </a></li>
-                <li><a href=""><img src="./Imagenes/product-2.jpg" alt="">
+                <li><a href="/Producto.html"><img src="./Imagenes/product-2.jpg" alt="">
                     <p class="p_productos">Pink wave Cup</p>
                     <span class="precio_descuento"> $100.00 -  <span class="precio_sin_descuento">120.00</span></span>
                 </a></li>
-                <li><a href=""><img src="./Imagenes/product-3.jpg" alt="">
+                <li><a href="Producto.html"><img src="./Imagenes/product-3.jpg" alt="">
                     <p class="p_productos">Tea and Chai</p>
                     <span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span>
                 </a></li>
-                <li><a href=""><img src="./Imagenes/product-4.jpg" alt="">
+                <li><a href="Producto.html"><img src="./Imagenes/product-4.jpg" alt="">
                     <p class="p_productos">Pearly Everlasting</p>
                     <span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span> </span>
                     
@@ -94,10 +96,10 @@
                 <li><a href=""><img src="./Imagenes/product-2.jpg" alt=""><p class="p_productos">Que herbal Tea</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
                 <li><a href=""><img src="./Imagenes/product-3.jpg" alt=""><p class="p_productos">Society Ice Tea</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
                 <li><a href=""><img src="./Imagenes/product-4.jpg" alt=""><p class="p_productos">Best Friends Tea</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
-                <li><a href=""><img src="./Imagenes/product-1.jpg" alt=""><p class="p_productos">Every spice Tea</p><span class="precio_descuento"> $100.00 -<span class="precio_sin_descuento">120.00</span> </span></a></li>
-                <li><a href=""><img src="./Imagenes/product-2.jpg" alt=""><p class="p_productos">Tea and Chai</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
-                <li><a href=""><img src="./Imagenes/product-3.jpg" alt=""><p class="p_productos">Green Tea Tulsi</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
-                <li><a href=""><img src="./Imagenes/product-4.jpg" alt=""><p class="p_productos">Instant Tea Premix</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
+                <li><a href=""><img src="./Imagenes/product-5.jpg" alt=""><p class="p_productos">Every spice Tea</p><span class="precio_descuento"> $100.00 -<span class="precio_sin_descuento">120.00</span> </span></a></li>
+                <li><a href=""><img src="./Imagenes/product-6.jpg" alt=""><p class="p_productos">Tea and Chai</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
+                <li><a href=""><img src="./Imagenes/product-7.jpg" alt=""><p class="p_productos">Green Tea Tulsi</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
+                <li><a href=""><img src="./Imagenes/product-8.jpg" alt=""><p class="p_productos">Instant Tea Premix</p><span class="precio_descuento"> $100.00 - <span class="precio_sin_descuento">120.00</span></span></a></li>
             </ul>
         </div>
         <div class="sextodiv">
