Arreglos finales de la pagina product

--- a/Producto.html
+++ b/Producto.html
@@ -107,7 +107,13 @@
                 <p>categories: Green,  Herbal, Loose, Mate, Organic</p>
                 <p>Tags: Oolong, Pu'erh, Dark, Special</p>
             </div>
-            <div></div>
+            <div class="redes">
+                <img src="/Imagenes/twiter.JPG" alt="">
+                <img src="/Imagenes/share.JPG" alt="">
+                <img src="/Imagenes/google.JPG" alt="">
+                <img src="/Imagenes/pinterest.JPG" alt="">
+                
+            </div>
         </section>
     </section>
     <!--------------------4TO CONTAINER BODY----------------->
@@ -136,7 +142,7 @@
         <!---------------TIT---------------->
     <section class="fourth">
         <div class="rel">
-            <h2><u>Related Products</h2></u>
+            <h2>Related Products</h2>
         </div>
         <!------------1RA IMAGEN------------->        
         <section class="rel1">    
