--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <ul>
             <li><a href="">HOME</a></li>
-            <li><a href="">ABOUT</a></li>
+            <li><a href="Producto.html">ABOUT</a></li>
             <li><a href="">BLOG</a></li>
             <li><a href="">PAGES</a></li>
             <li><a href="">CONTACT</a></li>
