--- a/Producto.html
+++ b/Producto.html
@@ -108,10 +108,10 @@
                 <p>Tags: Oolong, Pu'erh, Dark, Special</p>
             </div>
             <div class="redes">
-                <img src="/Imagenes/twiter.JPG" alt="">
-                <img src="/Imagenes/share.JPG" alt="">
-                <img src="/Imagenes/google.JPG" alt="">
-                <img src="/Imagenes/pinterest.JPG" alt="">
+                <img src="./Imagenes/twiter.JPG" alt="">
+                <img src="./Imagenes/share.JPG" alt="">
+                <img src="./Imagenes/google.JPG" alt="">
+                <img src="./Imagenes/pinterest.JPG" alt="">
                 
             </div>
         </section>
